--- a/index.html
+++ b/index.html
@@ -109,7 +109,52 @@
 
 		These facets can be explored through the interactive, metadata tools integrated within the Clio & Erato e-journal, allowing each reader to deepen, and to personalise, their encounter with lyrical poetry</p>
 
-		<p>Take a look at our current issues:</p>
+		<p>Take a look at our current editions:</p>
+		
+		<div class="container" id="GroupCards">
+		<div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+			<div class="col-md-3 col-sm-12">
+				<div class="card h-100">
+					<img src="SapphoImage.jpg" class="card-img-top" alt="Edition1"/>
+					<div class="card-body">
+						<h5 class="card-title">Ancient Greece</h5>
+						<p class="card-text">Discover the lyrical poetry of Ancient Greece through the work of Sappho of Lesbos, presented in English and Greek</p>
+						<p class="card-text"><a href="AncientGreece.html">Discover</a></p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-3 col-sm-12">
+				<div class="card h-100">
+					<img src="..." class="card-img-top" alt="Edition2" />
+					<div class="card-body">
+						<h5 class="card-title">Edition 2</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted"><a href="#">Discover</a></small>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-3 col-sm-12">
+				<div class="card h-100">
+					<img src="..." class="card-img-top" alt="Edition3" />
+					<div class="card-body">
+						<h5 class="card-title">Edition 3</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted"><a href="#">Discover</a></small>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</div>
 
 	</div>
 	
