--- a/index.html
+++ b/index.html
@@ -111,50 +111,58 @@
 
 		<p>Take a look at our current editions:</p>
 		
-		<div class="container" id="GroupCards">
-		<div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-			<div class="col-md-3 col-sm-12">
-				<div class="card h-100">
-					<img src="SapphoImage.jpg" class="card-img-top" alt="Edition1"/>
-					<div class="card-body">
-						<h5 class="card-title">Ancient Greece</h5>
-						<p class="card-text">Discover the lyrical poetry of Ancient Greece through the work of Sappho of Lesbos, presented in English and Greek</p>
-						<p class="card-text"><a href="AncientGreece.html">Discover</a></p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="SapphoImage.jpg" alt="Edition1">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Ancient Greece</h5>
+						<p>Discover the lyrical poetry of Ancient Greece through the work of Sapphos of Lesbos, presented in English and Green</p>
 					</div>
 				</div>
-			</div>
-			
-			<div class="col-md-3 col-sm-12">
-				<div class="card h-100">
-					<img src="..." class="card-img-top" alt="Edition2" />
-					<div class="card-body">
-						<h5 class="card-title">Edition 2</h5>
-						<p class="card-text">XXXX</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted"><a href="#">Discover</a></small>
+				<div class="carousel-item">
+					<img src="..." alt="Edition2">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Edition2</h5>
+						<p>XXXX</p>
 					</div>
 				</div>
-			</div>
-			
-			<div class="col-md-3 col-sm-12">
-				<div class="card h-100">
-					<img src="..." class="card-img-top" alt="Edition3" />
-					<div class="card-body">
-						<h5 class="card-title">Edition 3</h5>
-						<p class="card-text">XXXX</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted"><a href="#">Discover</a></small>
+				<div class="carousel-item">
+					<img src="..." alt="Edition3">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Edition3</h5>
+						<p>XXXX</p>
 					</div>
 				</div>
-			</div>
-			
+  
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 	</div>
+	<br>
 
 	</div>
 	
