--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -84,17 +84,18 @@
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container" style="background-image: url(SapphoImage.jpg); padding-top: 15%; padding-bottom: 15%;  background-size: cover;">
 			<h1>Sappho of Lesbos</h1>
-			<p>SOME TEXT</p>
 		</div>
 	</div>
 	<hr>
 	
 	<!--introduction to the edition-->
 	<div class="textsection" id="editionIntro">
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
+		<p>The Ancient Greek poet, Sappho, represents an enigmatic figure. Born to a wealthy family on the island of Lesbos in around 630BC, little else is known of her life. Indeed, even her works survive only in fragmentary form</p>
+
+		<p>Nevertheless, the works we do have show her to be a poet of remarkable ability. Even in Antiquity she was considered to be one of the greatest lyric poets, and we know from contemporary accounts that she wrote prolifically, composing approximately 10,000 lines of poetry in her lifetime, of which around 650 are extant</p>
+
+		<p>The lyrical poetry of Sappho was written to be accompanied to music, representing a body of poetry that is particularly attuned to the evocation of the senses</p>
+
 	</div>
 	<hr>
 	
