--- a/index.html
+++ b/index.html
@@ -111,54 +111,7 @@
 
 		<p>Take a look at our current editions:</p>
 		
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			</ol>
-			
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="SapphoImage.jpg" alt="Edition1">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Ancient Greece</h5>
-						<p>Discover the lyrical poetry of Ancient Greece through the work of Sapphos of Lesbos, presented in English and Green</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="..." alt="Edition2">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Edition2</h5>
-						<p>XXXX</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="..." alt="Edition3">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Edition3</h5>
-						<p>XXXX</p>
-					</div>
-				</div>
-  
-			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
+		<p>[INSERT CAROUSSEL OF EDITIONS?]</p>	
 		
 		
 	</div>
